fix wrap on flex items

--- a/next-character-generator/styles/form.module.css
+++ b/next-character-generator/styles/form.module.css
@@ -3,6 +3,7 @@
    font-size: large;
    font-family: Prata;
    padding: 0.5em;
+   margin: 0.3em;
    background-color: #120E0F;
    color: #D2B681;
    border: 0;
