--- a/next-character-generator/styles/generator-page.module.css
+++ b/next-character-generator/styles/generator-page.module.css
@@ -1,5 +1,6 @@
 .form_block{
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     margin: 2em 2em;
 }
